# Open-Movie-Editor

./: AUTHORS  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.ac  openmovieeditor.spec
cursors/: Makefile.am  Makefile.in  clip_a_cursor.crsr  clip_b_cursor.crsr
doc/: Makefile.am  Makefile.in  style.css  tutorial.html
doc/images/: Makefile.am  Makefile.in
ebuilds/: Makefile.am  Makefile.in  gavl-0.2.3.ebuild  openmovieeditor-0.0.20060331.ebuild
icons/: Makefile.am  Makefile.in  arrows_small.xpm  audio.xpm  dialog-warning.xpm  emblem-unreadable.xpm  frei0r.xpm  lock.xpm  logo.xpm  mute.xpm  openmovieeditor.desktop  razor.xpm  snap.xpm  source.xpm  titles.xpm  tool_automations.xpm  tool_positioning.xpm  trash.xpm  trash_small.xpm  video.xpm
src/: AddCommand.H  AddCommand.cxx  AddTrackCommand.H  AddTrackCommand.cxx  AudioClip.H  AudioClip.cxx  AudioClipArtist.H  AudioClipArtist.cxx  AudioFileFactory.H  AudioFileFactory.cxx  AudioFileGmerlin.H  AudioFileGmerlin.cxx  AudioFileProject.H  AudioFileProject.cxx  AudioFileSnd.H  AudioFileSnd.cxx  AudioThreadedRingbuffer.H  AudioThreadedRingbuffer.cxx  AudioTrack.H  AudioTrack.cxx  AudioVolumeFilter.H  AudioVolumeFilter.cxx  AudioVolumeFilterFactory.H  AudioVolumeFilterFactory.cxx  AutoDragHandler.H  AutoDragHandler.cxx  AutoTrack.H  AutoTrack.cxx  AutomationDragHandler.H  AutomationDragHandler.cxx  Command.H  Commands.H  CompositeCommand.H  CompositeCommand.cxx  DiskCache.H  DiskCache.cxx  DocManager.H  DocManager.cxx  DragBox.H  DragBox.cxx  (+172 more)
src/ColorCurve/: ColorCurveDialog.H  ColorCurveDialog.cxx  ColorCurveFactory.H  ColorCurveFactory.cxx  ColorCurveFilter.H  ColorCurveFilter.cxx  ColorGrader2.cxx  ColorGrader2.fl  ColorGrader2.h  CurveEditor2.H  CurveEditor2.cxx  Makefile.am  Makefile.in
src/ErrorDialog/: ErrorDialog.H  ErrorDialog.cxx  ErrorDialog.fl  FltkErrorHandler.H  FltkErrorHandler.cxx  IErrorHandler.H  IErrorHandler.cxx  Makefile.am  Makefile.in
src/Frei0r/: Frei0rDialog.H  Frei0rDialog.cxx  Frei0rEffect.H  Frei0rEffect.cxx  Frei0rFactory.H  Frei0rFactory.cxx  Frei0rFactoryPlugin.H  Frei0rFactoryPlugin.cxx  Frei0rWidget.H  Frei0rWidget.cxx  Makefile.am  Makefile.in
src/GmerlinEffects/: GmerlinEffect.H  GmerlinEffect.cxx  GmerlinFactory.H  GmerlinFactory.cxx  GmerlinFactoryPlugin.H  GmerlinFactoryPlugin.cxx  GmerlinWidget.H  GmerlinWidget.cxx  Makefile.am  Makefile.in
src/LiftGammaGain/: Fl_Hsv_Color_Chooser.H  Fl_Hsv_Color_Chooser.cxx  LiftGammaGainDialog.H  LiftGammaGainDialog.cxx  LiftGammaGainFactory.H  LiftGammaGainFactory.cxx  LiftGammaGainFilter.H  LiftGammaGainFilter.cxx  LiftGammaGainWidget.H  LiftGammaGainWidget.cxx  LiftGammaGainWidget.fl  Makefile.am  Makefile.in
src/LoadSaveManager/: LoadSaveManager.H  LoadSaveManager.cxx  Makefile.am  Makefile.in
src/NodeEditor/: BezierCurveNode.H  BezierCurveNode.cxx  CurveEditorBezier.H  CurveEditorBezier.cxx  Frei0rBoolButton.H  Frei0rBoolButton.cxx  Frei0rColorButton.H  Frei0rColorButton.cxx  Frei0rDoubleSlider.H  Frei0rDoubleSlider.cxx  Frei0rGraphEditor.H  Frei0rGraphEditor.cxx  Frei0rNode.H  Frei0rNode.cxx  INode.H  INodeFilterFactoryPlugin.H  ImageNode.H  ImageNode.cxx  Makefile.am  Makefile.in  NodeFilter.H  NodeFilter.cxx  NodeFilterBezierCurveFactoryPlugin.H  NodeFilterBezierCurveFactoryPlugin.cxx  NodeFilterDialog.H  NodeFilterDialog.cxx  NodeFilterDialog.fl  NodeFilterFactory.H  NodeFilterFactory.cxx  NodeFilterFrei0rFactory.H  NodeFilterFrei0rFactory.cxx  NodeFilterFrei0rFactoryPlugin.H  NodeFilterFrei0rFactoryPlugin.cxx  NodeFilterImageFactoryPlugin.H  NodeFilterImageFactoryPlugin.cxx  NodeFilterPreviewFactoryPlugin.H  NodeFilterPreviewFactoryPlugin.cxx  PreviewNode.H  PreviewNode.cxx  SinkNode.H  (+3 more)
src/ProgressDialog/: IProgressListener.H  Makefile.am  Makefile.in  ProgressDialog.cxx  ProgressDialog.fl  ProgressDialog.h
src/RenderDialog/: EncodingPreset.H  EncodingPreset.cxx  Makefile.am  Makefile.in  RenderDialog.H  RenderDialog.cxx  RenderDialog.fl  VideoWriterQT.H  VideoWriterQT.cxx  video_format.H
src/sl/: Makefile.am  Makefile.in  sl.c  sl.h
src/timeline/: Clip.H  Clip.cxx  ClipIdProvider.H  Makefile.am  Makefile.in  TimelineBase.H  TimelineBase.cxx  Track.H  Track.cxx
src/tinyxml/: Makefile.am  Makefile.in  tinyxml.cpp
