# Copyright (C) 2005 Richard Spindler <richard.spindler AT gmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

desktopdir = $(datadir)/applications
desktop_DATA = openmovieeditor.desktop

pixmapdir = $(datadir)/pixmaps
pixmap_DATA = openmovieeditor.xpm

EXTRA_DIST = openmovieeditor.desktop \
		openmovieeditor.xpm \
		audio.xpm video.xpm arrows_small.xpm dialog-warning.xpm \
             logo.xpm trash_small.xpm openmovieeditor.png titles.xpm \
						 trash.xpm tool_automations.xpm tool_positioning.xpm mute.xpm \
						 razor.xpm snap.xpm emblem-unreadable.xpm frei0r.xpm source.xpm \
						 lock.xpm
