# Copyright (C) 2008 Richard Spindler <richard.spindler AT gmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

noinst_LIBRARIES = libFrei0r.a
AM_CPPFLAGS = -ggdb -I$(top_srcdir)/src -I$(top_srcdir)/src/sl -I$(top_srcdir)/src/tinyxml -I$(top_srcdir)/icons @CPPFLAGS@
libFrei0r_a_SOURCES = \
Frei0rDialog.cxx  Frei0rEffect.cxx  Frei0rFactory.cxx  Frei0rFactoryPlugin.cxx  Frei0rWidget.cxx  \
Frei0rDialog.H    Frei0rEffect.H    Frei0rFactory.H    Frei0rFactoryPlugin.H    Frei0rWidget.H
